did a go run t2w.go -src=../../example/ -dest=../../example_html

--- a/example_html/pages/dira/vijf-donec-lacus-leo.html
+++ b/example_html/pages/dira/vijf-donec-lacus-leo.html
@@ -1,2 +1,3 @@
 <h1 id="vijf-donec-lacus-leo">Vijf Donec lacus leo</h1>
 <p>Feugiat sit amet pulvinar eget, rutrum non nisi. Donec porttitor rutrum cursus. Nam vel interdum purus. Nunc lobortis maximus lectus eu consectetur. Vivamus ut fringilla justo. Suspendisse dictum dignissim suscipit.</p>
+<p>See <a href="#/dirb/acht-pellentesque-lacinia">Acht</a></p>
