--- a/example_html/pages/dirb/acht-pellentesque-lacinia.html
+++ b/example_html/pages/dirb/acht-pellentesque-lacinia.html
@@ -1,6 +1,9 @@
 <h1 id="acht-pellentesque-lacinia">Acht Pellentesque lacinia</h1>
 <p>velit vel cursus convallis, sapien justo ultricies felis, a aliquet nunc tellus quis eros. Ut et rutrum turpis. Fusce risus magna, placerat eu lectus eget, feugiat malesuada nisl. Donec a laoreet ante, in laoreet velit.</p>
+<p>See <a href="#/dirb/tien-phasellus-lorem-eros">Tien</a></p>
 <h2 id="duis-faucibus-auctor-tortor-nec-accumsan">Duis faucibus auctor tortor nec accumsan</h2>
 <p>Vivamus erat quam, ultrices in aliquam vitae, dapibus non lacus. Phasellus gravida ligula urna, at congue dui vulputate vitae. Phasellus massa velit, lacinia in tincidunt vel, pharetra id urna. Morbi vel massa malesuada justo euismod dapibus. Vivamus laoreet lacinia urna eget dapibus.</p>
+<p>See <a href="#/dira/vijf-donec-lacus-leo">Vijf</a></p>
 <h2 id="vivamus-luctus-maximus-risus">Vivamus luctus maximus risus</h2>
 <p>sed tincidunt nisi fermentum ac. Proin suscipit bibendum odio, eu elementum massa auctor imperdiet. Curabitur erat urna, eleifend nec viverra lacinia, volutpat porttitor dolor. Mauris a neque pharetra libero volutpat gravida. Mauris vitae eros urna. Nunc viverra consequat volutpat.</p>
+<p>See <a href="#/dirb/acht-pellentesque-lacinia">Top</a></p>
