recreated example web site - links work

--- a/example_html/pages/twee-morbi-finibus-rutrum-condimentum..html
+++ b/example_html/pages/twee-morbi-finibus-rutrum-condimentum..html
@@ -1,3 +1,3 @@
 <h1 id="twee-morbi-finibus-rutrum-condimentum.">Twee Morbi finibus rutrum condimentum.</h1>
 <p>Duis posuere libero vitae auctor rhoncus. Donec eleifend malesuada ligula, vel condimentum ipsum tincidunt a. Nam eget ante eget tellus rhoncus auctor eu eu augue.</p>
-<p>Refer to <a href="/#drie">three</a>.</p>
+<p>Refer to <a href="#/drie-pellentesque-lobortis-lacus">three</a>.</p>
