--- a/example_html/pages/drie-pellentesque-lobortis-lacus.html
+++ b/example_html/pages/drie-pellentesque-lobortis-lacus.html
@@ -1,3 +1,3 @@
 <h1 id="drie-pellentesque-lobortis-lacus">Drie Pellentesque lobortis lacus</h1>
 <p>Condimentum rutrum enim blandit. Sed vitae luctus libero. Aliquam erat volutpat. Morbi accumsan sem sodales lorem congue placerat. Nam auctor sapien id libero vulputate, non sodales nibh tempus. Donec sagittis consectetur magna sit amet vehicula. Vivamus sit amet dui eget urna vestibulum gravida. Quisque et mauris vehicula, maximus nisi luctus, pellentesque dui.</p>
-<p>Refer to <a href="#/twee-morbi-finibus-rutrum-condimentum">two</a>.</p>
+<p>Refer to <a href="#/twee-morbi-finibus-rutrum-condimentum.">two</a>.</p>
