deeper index pages have up link to higher index pages

--- a/example_html/pages/dirb/index.html
+++ b/example_html/pages/dirb/index.html
@@ -1,4 +1,4 @@
-<h1 id="index">Index</h1>
+<h1 id="index"><a href="#">Index</a></h1>
 <h2 id="sections">Sections</h2>
 <ul>
 <li><a href="#dirb/acht-pellentesque-lacinia">Acht Pellentesque lacinia</a>
