--- a/example_html/pages/index.html
+++ b/example_html/pages/index.html
@@ -3,6 +3,7 @@
 <ul>
 <li><a href="#een-lorem-ipsum-dolor-sit-amet">Een Lorem ipsum dolor sit amet</a></li>
 <li><a href="#twee-morbi-finibus-rutrum-condimentum.">Twee Morbi finibus rutrum condimentum.</a></li>
+<li><a href="#images">Images</a></li>
 <li><a href="#drie-pellentesque-lobortis-lacus">Drie Pellentesque lobortis lacus</a></li>
 </ul>
 <h2 id="directories">Directories</h2>
