--- a/example_html/pages/images.html
+++ b/example_html/pages/images.html
@@ -1,7 +1,7 @@
 <h1 id="images">Images</h1>
 <p>Markdown allows for images:</p>
 <div class="figure">
-<img src="img/door.png" />
+<img src="images/door_1_1.png" />
 
 </div>
 <p>(Image from <a href="http://littlevisuals.co/">little visuals</a>)</p>
